--- a/css/styles.css
+++ b/css/styles.css
@@ -52,11 +52,11 @@ a:hover {
     font-weight: bold;
 }
 
-#fname, #lname {
+#first, #last {
     display: inline-block;
 }
 
-#lname {
+#last {
     color: #1f1f1f;
     text-shadow:
         -1px -1px 0 #82cdff,
@@ -74,6 +74,12 @@ a:hover {
     color: #4db8ff;
 }
 
+.styled-list li p {
+    color: #e0e0e0;
+    padding-bottom: 15px;
+}
+
+
 #projects p {
     margin: 0.4em;
 }
@@ -82,6 +88,7 @@ a:hover {
 #footer {
     margin-top: auto;
     padding: 10px 0;
+    font-size: .8em;
     opacity: 0.7;
     background-color: #1f1f1f;
     color: #999999;
