--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 html {
-    background-color: #121212;
+    background-color: #403F4C;
     color: #f0f0f0;
     font-size: 1.4em;
     font-family: 'Courier New', Courier, monospace;
@@ -15,7 +15,7 @@ body {
 }
 
 a {
-    color: #4db8ff;
+    color: #e0e0e0;
     text-decoration: none;
     transition: color 0.3s ease, background-color 0.3s ease;
 }
@@ -31,8 +31,8 @@ a:hover {
     margin-bottom: 20px;
     padding: 10px 0;
     opacity: 0.7;
-    background-color: #1f1f1f;
-    color: #999999;
+    background-color: #2C2B3C;
+    color: #e0e0e0;
 }
 
 #heading, #about, #projects {
@@ -40,7 +40,7 @@ a:hover {
     width: 60%;
     margin: 20px auto;
     padding: 20px;
-    background-color: #1f1f1f;
+    background-color: #2C2B3C;
     border-radius: 8px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
     text-align: left;
@@ -56,14 +56,14 @@ a:hover {
     display: inline-block;
 }
 
-#last {
+/* #last {
     color: #1f1f1f;
     text-shadow:
         -1px -1px 0 #82cdff,
          1px -1px 0 #82cdff,  
         -1px  1px 0 #82cdff, 
          1px  1px 0 #82cdff;
-}
+} */
 
 .styled-list {
     list-style-type: none;
@@ -90,8 +90,8 @@ a:hover {
     padding: 10px 0;
     font-size: .8em;
     opacity: 0.7;
-    background-color: #1f1f1f;
-    color: #999999;
+    background-color: #2C2B3C;
+    color: #e0e0e0;
 }
 
 p.separator {
