--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ a {
 a:hover {
     color: black;
     background-color: #4db8ff;
-    padding: 2px 3px;
+    padding: 3px;
     border-radius: 3px;
 }
 
@@ -45,6 +45,9 @@ a:hover {
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
     text-align: left;
     color: #e0e0e0;
+}
+#heading:hover , #about:hover , #projects:hover {
+    padding: 25px;
 }
 
 #heading h2, #about h2, #projects h2 {
